--- a/enfi-framework/assets/css/main.css
+++ b/enfi-framework/assets/css/main.css
@@ -70,28 +70,16 @@ button:focus .btn:active,
     margin: 80px 0;
 }
 
-.content-title,
-.archive-title {
-    background: #f3f3f3;
-    padding: 20px 0px;
-    font-size: 16px !important;
-    color: rgba(0,0,0,0.3);
+.content-title {
+    background: rgba(0,0,0,0.6);
     margin-bottom: 40px;
+    height: 400px;
+    text-align: center;
 }
 
-.content-title h1,
-.archive-title h1{
-    font-size: 1.4rem;
-    color: rgba(0, 0, 0, 0.3);
+.content-title h1{
+    color: white;
 }
-
-.content-title .breadcrumbs,
-.archive-title .breadcrumbs {
-    color: rgba(0, 0, 0, 0.3);
-    text-align: right;
-    font-size: 0.8rem;
-}
-
 
 
 .warning-jq-not-loaded {
