--- a/enfi-framework/post-types/ef-blog/css/blog.css
+++ b/enfi-framework/post-types/ef-blog/css/blog.css
@@ -1,3 +1,34 @@
 .blog-item {
-    background-color: green;
+    margin-bottom: 40px;
+}
+
+.blog-item .title{
+    font-size: 0.8rem;
+    color: rgba(0,0 0, 0.4);
+}
+
+.blog-item .author-date{
+    font-size: 0.8rem;
+    color: rgba(0,0 0, 0.4);
+    margin-top: 10px;
+}
+
+.blog-item .content{
+    margin-top: 10px;
+}
+
+.blog-item .read-more {
+    display: inline-block;
+    border: 1px solid rgba(0,0,0, 1);
+    color: black;
+    padding: 8px 16px;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    margin-top: 10px;
+ }
+
+.blog-item .read-more:hover {
+    background-color: black;
+    color: white;
+    transition: 200ms;
 }
