--- a/enfi-framework/assets/css/main.css
+++ b/enfi-framework/assets/css/main.css
@@ -304,3 +304,23 @@ input[type="color"]:focus,
     color: rgba(0, 0, 0, 0.6);
     cursor: pointer;
 }
+
+.ef-widget-container {
+    margin-bottom: 40px;
+}
+
+.ef-widget-container ul{
+    margin: 10px;
+    padding: 0;
+}
+
+.ef-widget-container ul li {
+    margin: 0px;
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    list-style: none;
+}
+
+.ef-widget-container ul li:last-child {
+    border-bottom: 0;
+}
