--- a/enfi-framework/assets/css/main-mobile.css
+++ b/enfi-framework/assets/css/main-mobile.css
@@ -28,13 +28,13 @@ h6 {
 
 a {
     text-decoration: none;
-    color: rgba(210,53,19,0.4);
+    color: rgba(210, 53, 19, 0.4);
     transition: 200ms;
 }
 
 a:hover {
     text-decoration: none;
-    color: rgba(210,53,19,1);
+    color: rgba(210, 53, 19, 1);
 }
 
 textarea:focus,
@@ -53,15 +53,14 @@ input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {
-  outline: 0;
-  box-shadow: none;
+    outline: 0;
+    box-shadow: none;
 }
- 
 
-
-button, .btn {
+button,
+.btn {
     display: inline-block;
-    border: 2px solid rgba(0,0,0,0.8);
+    border: 2px solid rgba(0, 0, 0, 0.8);
     padding: 8px 32px;
     background: none;
     /* border-radius: 4px; */
@@ -71,15 +70,16 @@ button, .btn {
     cursor: pointer;
 }
 
-button:hover, .btn:hover {
-    border: 2px solid rgba(0,0,0,1);
+button:hover,
+.btn:hover {
+    border: 2px solid rgba(0, 0, 0, 1);
     background: black;
     color: white;
 }
 
 .btn-block {
     display: block;
-    border: 2px solid rgba(0,0,0,0.8);
+    border: 2px solid rgba(0, 0, 0, 0.8);
     padding: 8px 32px;
     background: none;
     /* border-radius: 4px; */
@@ -90,18 +90,16 @@ button:hover, .btn:hover {
 }
 
 .btn-block:hover {
-    border: 2px solid rgba(0,0,0,1);
+    border: 2px solid rgba(0, 0, 0, 1);
     background: black;
     color: white;
 }
 
 button:active,
-button:focus
-.btn:active,
+button:focus .btn:active,
 .btn:focus,
 .btn-block:active,
-.btn-block:focus
-{
+.btn-block:focus {
     box-shadow: none;
     outline: none;
 }
@@ -131,13 +129,9 @@ button:focus
     padding: 40px 20px !important;
 }
 
-.content-title .title-container-normal {
+.content-title .title-container-normal {}
 
-}
-
-.content-title .text-container-normal {
-
-}
+.content-title .text-container-normal {}
 
 .content-title .text-container-normal h2,
 .content-title .text-container-normal h3,
@@ -148,14 +142,13 @@ button:focus
 .content-title .text-container-side h3,
 .content-title .text-container-side h4,
 .content-title .text-container-side h5,
-.content-title .text-container-side h6
-{
+.content-title .text-container-side h6 {
     margin-bottom: 40px;
     text-align: left;
 }
 
 .content-title .text-container-normal p,
-.content-title .text-container-side p{
+.content-title .text-container-side p {
     margin-bottom: 20px;
     text-align: left;
 }
@@ -171,32 +164,32 @@ button:focus
 
 .content-breadcrumbs {
     height: 60px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     text-transform: uppercase;
     font-size: 0.8rem;
 }
 
-.content-breadcrumbs a{
-    color: rgba(0,0,0,0.3);
+.content-breadcrumbs a {
+    color: rgba(0, 0, 0, 0.3);
 }
 
-.content-breadcrumbs a:hover{
-    color: rgba(0,0,0,0.6);
+.content-breadcrumbs a:hover {
+    color: rgba(0, 0, 0, 0.6);
 }
 
-.content-breadcrumbs .gutter{
-    color: rgba(0,0,0,0.3);
+.content-breadcrumbs .gutter {
+    color: rgba(0, 0, 0, 0.3);
     margin: 0 15px;
 }
 
 .content-sub-page-menu {
     display: block;
     width: 100%;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     margin-bottom: 40px;
 }
 
-.content-sub-page-menu ul{
+.content-sub-page-menu ul {
     list-style: none;
     margin: 0px;
     padding: 0px;
@@ -208,28 +201,28 @@ button:focus
     display: none;
 }
 
-.content-sub-page-menu li{
+.content-sub-page-menu li {
     display: inline-flex;
     margin-right: 20px;
 }
 
-.content-sub-page-menu li a{
-    color: rgba(0,0,0,0.3);
+.content-sub-page-menu li a {
+    color: rgba(0, 0, 0, 0.3);
     display: block;
     padding: 20px 0;
     border-bottom: 1px solid transparent;
 }
 
 .content-sub-page-menu .active {
-    color: rgba(0,0,0,1);
+    color: rgba(0, 0, 0, 1);
     border-bottom: 1px solid black;
 }
 
-.content-sub-page-menu li a:hover{
-    color: rgba(0,0,0,1);
+.content-sub-page-menu li a:hover {
+    color: rgba(0, 0, 0, 1);
     display: block;
     border-bottom: 1px solid black;
- }
+}
 
 .warning-jq-not-loaded {
     display: block;
@@ -242,11 +235,8 @@ button:focus
     font-size: 1.2rem;
     padding: 35px;
 }
- 
 
-
-
-.post-content { 
+.post-content {
     min-height: 300px;
 }
 
@@ -267,32 +257,29 @@ button:focus
 .post-content table {
     width: 100%;
     margin-bottom: 40px;
-
 }
 
-.post-content table tr{
+.post-content table tr {}
 
-}
-
-.post-content table th{
-    background-color: rgba(0,0,0,0.2);
+.post-content table th {
+    background-color: rgba(0, 0, 0, 0.2);
     padding: 5px 10px;
-    border: 1px solid rgba(0,0,0,0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     font-weight: normal;
 }
 
-.post-content table td{
+.post-content table td {
     padding: 10px 15px;
-    border: 1px solid rgba(0,0,0,0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.post-content img{
+.post-content img {
     max-width: 100%;
     height: auto;
     display: block;
 }
 
-.post-content ul{
+.post-content ul {
     list-style: square;
     margin-bottom: 40px;
 }
@@ -301,7 +288,7 @@ button:focus
     margin-bottom: 40px;
 }
 
-.post-content .tags{
+.post-content .tags {
     margin-bottom: 40px;
 }
 
@@ -310,37 +297,36 @@ button:focus
     padding: 60px;
 }
 
-
 .archive-card-1-item {
     margin-bottom: 60px;
     padding: 40px;
     background: white;
-    box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.05);
+    box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.05);
     cursor: pointer;
     transition: 200ms;
 }
 
 .archive-card-1-item:hover {
-    box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.15);
+    box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.15);
 }
 
 .archive-card-1-item .title {
     margin: 15px 0;
 }
 
-.archive-card-1-item .title h5{
+.archive-card-1-item .title h5 {
     display: inline-block;
     font-weight: bold;
     text-align: left;
 }
 
-.archive-card-1-item .content{
+.archive-card-1-item .content {
     margin: 15px 0;
 }
 
-.archive-card-1-item .info{
+.archive-card-1-item .info {
     text-align: center;
-    border-top: 1px solid rgba(0,0,0,0.1);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
     padding: 15px 0px;
     text-transform: uppercase;
     font-size: 0.6rem;
@@ -351,12 +337,9 @@ button:focus
     height: auto;
 }
 
-
-
-
 .archive-list-1-item {
     margin-bottom: 20px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     padding: 20px 0;
 }
 
@@ -364,24 +347,24 @@ button:focus
     margin-bottom: 15px;
 }
 
-.archive-list-1-item .title h5{
+.archive-list-1-item .title h5 {
     display: inline-block;
     font-weight: bold;
     font-size: 26px;
     text-align: left;
 }
 
-.archive-list-1-item .content{
+.archive-list-1-item .content {
     margin-bottom: 25px 0;
 }
 
-.archive-list-1-item .info{
+.archive-list-1-item .info {
     text-align: left;
     text-transform: uppercase;
     font-size: 0.8rem;
 }
 
-.archive-list-1-item .thumbnail img{
+.archive-list-1-item .thumbnail img {
     width: 180px;
     height: auto;
 }
@@ -397,36 +380,35 @@ button:focus
     display: inline-block;
 }
 
-.tagcloud li a{
+.tagcloud li a {
     padding: 10px 15px;
     font-size: 0.7rem;
     text-transform: uppercase;
     background: #f1f1f1;
-    color: rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     display: inline-block;
-    margin: 0 5px 5px 0px; 
+    margin: 0 5px 5px 0px;
 }
 
 .pagination {
     display: table;
     width: 100%;
     text-align: center;
-
 }
 
 .pagination .page-numbers {
     display: inline-block;
-    background: rgba(0,0,0,0.05);
+    background: rgba(0, 0, 0, 0.05);
     padding: 8px 12px;
     text-transform: uppercase;
     font-size: 0.8rem;
     margin-right: 1px;
-    color: rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .pagination .current,
 .pagination .page-numbers:hover {
-    background: rgba(0,0,0,0.1);
-    color: rgba(0,0,0,0.6);
+    background: rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.6);
     cursor: pointer;
 }
