--- a/enfi-framework/style.css
+++ b/enfi-framework/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Enfi Framework
+Theme Name: EF Framework
 Theme URI: www.ricoder.de
 Author: Enrico Fischer
 Author URI: www.ricoder.de
