--- a/enfi-framework/style.css
+++ b/enfi-framework/style.css
@@ -8,7 +8,7 @@ Version: 1.0
 License: 
 License URI: 
 Tags: framework, bootstrap, simple, parent-child, child-compatibility
-Text Domain: enfi
+Text Domain: ef
 
 */
 
