--- a/enfi-framework/core/assets/modules/css/ef-cookie-law.css
+++ b/enfi-framework/core/assets/modules/css/ef-cookie-law.css
@@ -1,38 +1,46 @@
 @media only screen and (min-width: 992px) {
-    .enfi-cookieconsent {
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-        max-width: 500px;
+    .ef-cookieconsent-blur-bg {
         display: none;
-        z-index: 9999;   
+        background-color: white;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.95;
+        z-index: 9999999999;
     }
-
-    .enfi-cookieconsent .title{
-        padding: 40px 40px 20px 40px;
+    .ef-cookieconsent {
+        display: none;
+        z-index: 99999999991;
+        position: fixed;
+        top: 0;
+        left: 0px;
+        width: 100%;
+        height: 100%;
     }
-    
-    .enfi-cookieconsent .content{
-        padding: 20px 40px;
+    .ef-cookieconsent .title {
+        padding: 20px 0;
     }
-
-    .enfi-cookieconsent .accept{
+    .ef-cookieconsent .text {
+        padding: 20px 0;
+        text-align: justify;
+    }
+    .ef-cookieconsent .accept {
         text-align: center;
         display: block;
         padding: 20px 40px 20px 40px;
         width: 100%;
-        background-color: rgba(255,255,255,0.1);
+        background-color: rgba(255, 255, 255, 0.1);
         transition: 200ms;
     }
-    
-    .enfi-cookieconsent .accept:hover{
-        background-color: rgba(255,255,255,0.2);
+    .ef-cookieconsent .accept:hover {
+        background-color: rgba(255, 255, 255, 0.2);
     }
 }
 
 @media only screen and (max-width: 991px) {
-
-    .enfi-cookieconsent {
+    .ef-cookieconsent {
         position: fixed;
         left: 0px;
         bottom: 0px;
@@ -40,26 +48,22 @@
         display: none;
         z-index: 9999;
     }
-
-    .enfi-cookieconsent .title{
+    .ef-cookieconsent .title {
         padding: 40px 40px 20px 40px;
     }
-    
-    .enfi-cookieconsent .content{
+    .ef-cookieconsent .content {
         padding: 20px 40px;
     }
-
-    .enfi-cookieconsent .accept{
+    .ef-cookieconsent .accept {
         text-align: center;
         display: block;
         padding: 20px 40px 20px 40px;
         width: 100%;
         cursor: pointer;
-        background-color: rgba(255,255,255,0.1);
+        background-color: rgba(255, 255, 255, 0.1);
         transition: 200ms;
     }
-    
-    .enfi-cookieconsent .accept:hover{
-        background-color: rgba(255,255,255,0.2);
+    .ef-cookieconsent .accept:hover {
+        background-color: rgba(255, 255, 255, 0.2);
     }
 }
